# voice-assistant

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
cmake/: dependencies.cmake  flags.cmake
inc/: voiceassistant.hpp
src/: main.cpp  voiceassistant.cpp
tests/: CMakeLists.txt
tests/cmake/: dependencies.cmake  flags.cmake
tests/inc/mocks/: mock_chat.hpp  mock_shell.hpp  mock_stt.hpp  mock_tts.hpp
tests/src/: main.cpp  test_voiceassistant.cpp
